# a2-cloud-platform

./: .env  .env.j2  .gitmodules  .hadolint.yaml  Makefile  README.md  docker-compose.yml  invoke.yaml  mkdocs.yml  pyproject.toml
cloud-platform/: __init__.py
containers/authelia/: .env.j2  docker-compose.yml
containers/caddy/: Caddyfile  docker-compose.yaml  install_local_cert.sh
containers/discourse/: docker-compose.yaml
containers/keycloak/: .env.j2  docker-compose.yaml
containers/letsencrypt/: .env.j2  README.md  docker-compose.yaml
containers/letsencrypt/nginx/conf/: app.conf
containers/light-ldap/: .env.j2  docker-compose.yaml
containers/mailserver/: .env.j2  docker-compose.yaml
containers/taiga/: .env.j2  docker-compose.old.yml  docker-compose.yaml  email.host.passwd.key  email.host.passwd.key.secret
scripts/: hadolint  install_docker.sh
tasks/: __init__.py  build.py  const.py  deps.py  docker.py  gpg.py  lint.py  secret.py
